39-human-review: Change first element get call to be JDK-21 compliant